# codeowners-cpp

./: .clang-format  .gitignore  .gitmodules  .travis.ci  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  TODO.md  check-format.sh  install-deps.sh
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
apps/: CMakeLists.txt  ls-owners.x.cpp
hooks/: pre-commit
include/codeowners/: codeowners.hpp  errors.hpp  filesystem.hpp  git.hpp  git_resources.hpp  git_resources_fwd.hpp  index.hpp  parser.hpp  path_filters.hpp  path_sources.hpp  paths.hpp  recursive_filter_iterator.hpp  repository.hpp  ruleset.hpp  strong_typedef.hpp  type_utils.hpp  types.hpp
src/: attribute_set.cpp  attribute_set.hpp  codeowners.cpp  errors.cpp  filesystem.cpp  git.cpp  git_resources.cpp  git_resources.hpp  index.cpp  parser.cpp  pattern_map.hpp  recursive_filter_iterator.cpp  repository.cpp  ruleset.cpp
tests/: CMakeLists.txt  attribute_set.t.cpp  codeowners.t.cpp  filesystem.t.cpp  git.t.cpp  git_resources.t.cpp  index.t.cpp  parser.t.cpp  path_filters.t.cpp  path_sources.t.cpp  pattern_map.t.cpp  recursive_filter_iterator.t.cpp  repository.t.cpp  ruleset.t.cpp  strong_typedef.t.cpp  test_utils.hpp  type_utils.t.cpp  types.t.cpp
travis/: install-deps.sh
